--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1,5 +1,5 @@
 body {
-  background: var(--neutral-very-dark-blue);
+  background: $neutral-very-dark-blue;
   font-family: 'Rubik';
   color: #fff;
 }
