--- a/sass/colors.scss
+++ b/sass/colors.scss
@@ -1,13 +1,10 @@
-:root {
-  --primary-blue: hsl(246, 80%, 60%);
-  --primary-light-red-work: hsl(15, 100%, 70%);
-  --primary-soft-blue-play: hsl(195, 74%, 62%);
-  --primary-light-red-study: hsl(348, 100%, 68%);
-  --primary-lime-green-exercise: hsl(145, 58%, 55%);
-  --primary-violet-socil: hsl(246, 64%, 52%);
-
-  --neutral-very-dark-blue: hsl(226, 46%, 10%);
-  --neutral-dark-blue: hsl(235, 46%, 20%);
-  --dasaturated-blue: hsl(235, 45%, 61%);
-  --neutral-pale-blue: hsl(236, 100%, 87%);
-}
+$primary-blue: hsl(246, 80%, 60%);
+$primary-light-red-work: hsl(15, 100%, 70%);
+$primary-soft-blue-play: hsl(195, 74%, 62%);
+$primary-light-red-study: hsl(348, 100%, 68%);
+$primary-lime-green-exercise: hsl(145, 58%, 55%);
+$primary-violet-socil: hsl(246, 64%, 52%);
+$neutral-very-dark-blue: hsl(226, 46%, 10%);
+$neutral-dark-blue: hsl(235, 46%, 20%);
+$dasaturated-blue: hsl(235, 45%, 61%);
+$neutral-pale-blue: hsl(236, 100%, 87%);
