--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
-@import "./colors.scss";
-@import "./base.scss";
-@import "./profile/profile.scss";
-@import "./profile/header.scss";
-@import "./profile/menu.scss";
+@import "./colors";
+@import "./base";
+@import "./user/user";
+@import "./user/user-header";
+@import "./user/menu";
