--- a/sass/user/user.scss
+++ b/sass/user/user.scss
@@ -1,6 +1,6 @@
 
-.profile {
-  background: var(--neutral-dark-blue);
+.user{
+  background: $neutral-dark-blue;
   display: flex;
   flex-direction: column;
   width: 85%;
