--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,3 +3,8 @@
 @import "./user/user";
 @import "./user/user-header";
 @import "./user/menu";
+@import "./activities/activities";
+@import "./activities/activity/activity";
+@import "./activities/activity/activity-content/activity-content";
+@import "./activities/activity/activity-content/activity-content_datails";
+@import "./activities/work";
