--- a/sass/activities/activity/activity-content/activity-content.scss
+++ b/sass/activities/activity/activity-content/activity-content.scss
@@ -1,4 +1,20 @@
 .activity-content {
   margin-top: 3.5rem;
   padding: 0.5rem;
+  background: $primary-blue;
+  border-radius: 15px;
+  padding: 0 1.5rem;
+
+  .activity-content_header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 1.3rem;
+
+    .content_title {
+      font-size: 1.2rem;
+      font-weight: 500;
+      color: #fff;
+    }
+  }
 }
