--- a/sass/activities/activity/activity.scss
+++ b/sass/activities/activity/activity.scss
@@ -1,16 +1,15 @@
 .activity {
-  width: 80%;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  background: $primary-blue;
+  background: $neutral-dark-blue;
   border-radius: 15px;
   position: relative;
 
   .activity-image {
-    width: 45px;
-    object-fit: cover;
+    width: 88px;
     position: absolute;
-    top: 5px;
-    right: 5px;
+    top: -.89rem;
+    right: 1rem;
   }
 }
