--- a/sass/base.scss
+++ b/sass/base.scss
@@ -8,6 +8,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   max-width: 375px;
   margin: 50px auto 0 auto;
 }
