--- a/sass/activities/activity/activity-content/activity-content.scss
+++ b/sass/activities/activity/activity-content/activity-content.scss
@@ -1,7 +1,7 @@
 .activity-content {
   margin-top: 3.5rem;
   padding: 0.5rem;
-  background: $primary-blue;
+  background: $neutral-dark-blue;
   border-radius: 15px;
   padding: 0 1.5rem;
 
