--- a/css/style.css
+++ b/css/style.css
@@ -82,17 +82,15 @@ body {
   flex-direction: column;
   background: #1c1f4a;
   border-radius: 15px;
-  position: relative;
 }
 .activity .activity-image {
   width: 88px;
-  position: absolute;
-  top: -0.89rem;
-  right: 1rem;
+  height: 50px;
+  object-fit: cover;
+  align-self: flex-end;
 }
 
 .activity-content {
-  margin-top: 3.5rem;
   padding: 0.5rem;
   background: #1c1f4a;
   border-radius: 15px;
