--- a/sass/activities/activity/activity.scss
+++ b/sass/activities/activity/activity.scss
@@ -4,12 +4,12 @@
   flex-direction: column;
   background: $neutral-dark-blue;
   border-radius: 15px;
-  position: relative;
+
 
   .activity-image {
     width: 88px;
-    position: absolute;
-    top: -.89rem;
-    right: 1rem;
+    height: 50px;
+    object-fit: cover;
+    align-self: flex-end;
   }
 }
