--- a/css/style.css
+++ b/css/style.css
@@ -70,13 +70,13 @@ body {
 }
 
 .activities {
-  margin-top: 1.5rem;
   display: flex;
   flex-direction: column;
   width: 85%;
 }
 
 .activity {
+  margin-top: 1.5rem;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -91,6 +91,7 @@ body {
 }
 
 .activity-content {
+  cursor: pointer;
   padding: 0.5rem;
   background: #1c1f4a;
   border-radius: 15px;
