--- a/sass/activities/activity/activity.scss
+++ b/sass/activities/activity/activity.scss
@@ -1,10 +1,10 @@
 .activity {
+  margin-top: 1.5rem;
   width: 100%;
   display: flex;
   flex-direction: column;
   background: $neutral-dark-blue;
   border-radius: 15px;
-
 
   .activity-image {
     width: 88px;
