--- a/sass/base.scss
+++ b/sass/base.scss
@@ -4,11 +4,19 @@ body {
   color: #fff;
 }
 
+
+
 .container {
-  display: flex;
-  flex-direction: column;
+  display : flex;
   justify-content: center;
   align-items: center;
-  max-width: 375px;
-  margin: 50px auto 0 auto;
+  margin: 50px auto 50px auto;
+  max-width: 1080px;
+}
+
+@media screen and (max-width: 1080px){
+  .container {
+    flex-direction: column;
+    max-width: 375px;
+  }    
 }
