--- a/sass/user/user-header.scss
+++ b/sass/user/user-header.scss
@@ -1,12 +1,10 @@
 .user-header {
   box-sizing: border-box;
-  padding: 10px 1.5rem;
+  padding: 2.5rem;
   border-radius: 15px;
   width: 100%;
+  height: 65%;
   background: $primary-blue;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 
 .user-image {
@@ -16,14 +14,33 @@
   border: 3px solid #fff;
 }
 
-.user{
+.user {
   display: flex;
   flex-direction: column;
-
 }
 
+
+.user-information {
+  margin-top: 5rem;
+}
 .user-name {
- margin: 0;
- font-size: 18px; 
- font-weight: 300;
+  margin-top: 2px;
+  font-size: 2.5rem;
+}
+
+@media screen and (max-width: 1080px) {
+  .user-header {
+    display: flex;
+    padding: 10px 1.5rem;
+    height: 115px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .user-name {
+    margin: 0;
+    font-size: 18px;
+    font-weight: 300;
+  }
 }
