--- a/sass/user/user-header.scss
+++ b/sass/user/user-header.scss
@@ -19,13 +19,22 @@
   flex-direction: column;
 }
 
-
 .user-information {
   margin-top: 5rem;
-}
-.user-name {
-  margin-top: 2px;
-  font-size: 2.5rem;
+
+  span {
+    font-size: .959rem;
+    line-height: 1.2rem;
+    font-weight: 300;
+    opacity: 0.8;
+  }
+
+  .user-name {
+    margin-top: 4px;
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+    letter-spacing: 0.1072rem;
+  }
 }
 
 @media screen and (max-width: 1080px) {
@@ -37,10 +46,17 @@
     align-items: center;
     justify-content: space-between;
   }
+  .user-information {
+    margin-top: 0;
 
-  .user-name {
-    margin: 0;
-    font-size: 18px;
-    font-weight: 300;
+    span {
+      font-size: 0.989rem;
+    }
+
+    .user-name {
+      margin: 0;
+      font-size: 18px;
+      font-weight: 300;
+    }
   }
 }
