--- a/css/style.css
+++ b/css/style.css
@@ -121,18 +121,25 @@ body {
   }
 }
 .activities {
+  margin-left: 2rem;
   display: flex;
-  flex-direction: column;
-  width: 85%;
+  width: 60%;
+  flex-flow: wrap;
 }
 
+@media screen and (max-width: 1080px) {
+  .activities {
+    margin-left: 0;
+    flex-direction: column;
+    width: 85%;
+  }
+}
 .activity {
-  margin-top: 1.5rem;
-  width: 100%;
   display: flex;
   flex-direction: column;
-  background: #1c1f4a;
+  margin-top: 1.5rem;
   border-radius: 15px;
+  background: #1c1f4a;
 }
 .activity .activity-image {
   width: 88px;
@@ -141,6 +148,11 @@ body {
   align-self: flex-end;
 }
 
+@media screen and (max-width: 1080px) {
+  .activity {
+    width: 100%;
+  }
+}
 .activity-content {
   cursor: pointer;
   padding: 0.5rem;
