--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
 }
 
 .container {
+  height: 35rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,14 +15,15 @@ body {
 
 @media screen and (max-width: 1080px) {
   .container {
+    height: auto;
     flex-direction: column;
     max-width: 375px;
   }
 }
 .user {
   background: #1c1f4a;
-  width: 35%;
-  height: 35rem;
+  width: 28%;
+  height: 100%;
   border-radius: 15px;
 }
 
@@ -125,6 +127,7 @@ body {
   display: flex;
   width: 60%;
   flex-flow: wrap;
+  flex-grow: 2;
 }
 
 @media screen and (max-width: 1080px) {
