--- a/sass/base.scss
+++ b/sass/base.scss
@@ -7,6 +7,7 @@ body {
 
 
 .container {
+  height: 35rem;
   display : flex;
   justify-content: center;
   align-items: center;
@@ -16,6 +17,7 @@ body {
 
 @media screen and (max-width: 1080px){
   .container {
+    height: auto;
     flex-direction: column;
     max-width: 375px;
   }    
