--- a/sass/user/user.scss
+++ b/sass/user/user.scss
@@ -1,7 +1,7 @@
 .user {
   background: $neutral-dark-blue;
-  width: 35%;
-  height: 35rem;
+  width: 28%;
+  height: 100%;
   border-radius: 15px;
 }
 
