--- a/sass/activities/activity/activity-content/activity-content.scss
+++ b/sass/activities/activity/activity-content/activity-content.scss
@@ -1,6 +1,6 @@
 .activity-content {
+  height: 12rem;
   cursor: pointer;
-  padding: 0.5rem;
   background: $neutral-dark-blue;
   border-radius: 15px;
   padding: 0 1.5rem;
@@ -10,11 +10,18 @@
     justify-content: space-between;
     align-items: center;
     padding-top: 1.3rem;
+  }
 
-    .content_title {
-      font-size: 1.2rem;
-      font-weight: 500;
-      color: #fff;
-    }
+  .content_title {
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: #fff;
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  .activity-content {
+    height: auto;
+    padding-bottom: 1.2rem;
   }
 }
