--- a/sass/activities/activities.scss
+++ b/sass/activities/activities.scss
@@ -2,14 +2,17 @@
   margin-left: 2rem;
   display: flex;
   width: 60%;
+  height: 100%;
   flex-flow: wrap;
+  align-items: flex-end;
   flex-grow: 2;
 }
 
 @media screen and (max-width: 1080px) {
   .activities {
-    margin-left: 0;
     flex-direction: column;
+    height: auto;
+    margin-left: 0;
     width: 85%;
   }
 }
