--- a/sass/colors.scss
+++ b/sass/colors.scss
@@ -3,7 +3,8 @@ $primary-light-red-work: hsl(15, 100%, 70%);
 $primary-soft-blue-play: hsl(195, 74%, 62%);
 $primary-light-red-study: hsl(348, 100%, 68%);
 $primary-lime-green-exercise: hsl(145, 58%, 55%);
-$primary-violet-socil: hsl(246, 64%, 52%);
+$primary-violet-social: hsl(246, 64%, 52%);
+$soft-orange-self-care: hsl(43, 84%, 65%);
 $neutral-very-dark-blue: hsl(226, 46%, 10%);
 $neutral-dark-blue: hsl(235, 46%, 20%);
 $dasaturated-blue: hsl(235, 45%, 61%);
