--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,3 +8,8 @@
 @import "./activities/activity/activity-content/activity-content";
 @import "./activities/activity/activity-content/activity-content_datails";
 @import "./activities/work";
+@import "./activities/play";
+@import "./activities/study";
+@import "./activities/exercise";
+@import "./activities/social";
+@import "./activities/self-care";
