--- a/sass/activities/social.scss
+++ b/sass/activities/social.scss
@@ -1,9 +1,15 @@
 .social {
   background: $primary-violet-social;
   background-image: url(../../assets/images/icon-social.svg);
-  background-position: 119px -3px;
+  background-position: 120px -3px;
   background-repeat: no-repeat;
-  background-size: 7rem;
+  background-size: 6rem;
 
   grid-area: social;
+}
+
+@media screen and (max-width: 1080px) {
+  .social {
+    background-position: 182px -3px;
+  }
 }
