--- a/sass/activities/exercise.scss
+++ b/sass/activities/exercise.scss
@@ -1,9 +1,15 @@
 .exercise {
   background: $primary-lime-green-exercise;
   background-image: url(../../assets/images/icon-exercise.svg);
-  background-position: 119px -3px;
+  background-position: 120px -3px;
   background-repeat: no-repeat;
-  background-size: 7rem;
+  background-size: 6rem;
 
   grid-area: exercise;
+}
+
+@media screen and (max-width: 1080px) {
+  .exercise {
+    background-position: 182px -3px;
+  }
 }
