--- a/sass/activities/work.scss
+++ b/sass/activities/work.scss
@@ -1,9 +1,15 @@
 .work {
   background: $primary-light-red-work;
   background-image: url(../../assets/images/icon-work.svg);
-  background-position: 119px -3px;
+  background-position: 120px -3px;
   background-repeat: no-repeat;
-  background-size: 7rem;
+  background-size: 6rem;
 
   grid-area: work;
+}
+
+@media screen and (max-width: 1080px) {
+  .work {
+    background-position: 182px -3px;
+  }
 }
