--- a/sass/_variaveis.scss
+++ b/sass/_variaveis.scss
@@ -1,3 +1,4 @@
+// Colors
 $primary-blue: hsl(246, 80%, 60%);
 $primary-light-red-work: hsl(15, 100%, 70%);
 $primary-soft-blue-play: hsl(195, 74%, 62%);
@@ -9,3 +10,11 @@ $neutral-very-dark-blue: hsl(226, 46%, 10%);
 $neutral-dark-blue: hsl(235, 46%, 20%);
 $dasaturated-blue: hsl(235, 45%, 61%);
 $neutral-pale-blue: hsl(236, 100%, 87%);
+
+// Size and Position 
+$icons-size: 6rem;
+$icons-position-x-desktop: 120px;
+$icons-position-y-desktop: -3px;
+$icons-position-x-mobile: 182px;
+$icons-position-y-mobile: -3px;
+
