--- a/sass/activities/exercise.scss
+++ b/sass/activities/exercise.scss
@@ -1,15 +1,15 @@
 .exercise {
   background: $primary-lime-green-exercise;
   background-image: url(../../assets/images/icon-exercise.svg);
-  background-position: 120px -3px;
+  background-position: $icons-position-x-desktop $icons-position-y-desktop;
   background-repeat: no-repeat;
-  background-size: 6rem;
+  background-size: $icons-size;
 
   grid-area: exercise;
 }
 
 @media screen and (max-width: 1080px) {
   .exercise {
-    background-position: 182px -3px;
+    background-position: $icons-position-x-mobile $icons-position-y-mobile;
   }
 }
