--- a/sass/activities/study.scss
+++ b/sass/activities/study.scss
@@ -1,15 +1,15 @@
 .study {
   background: $primary-light-red-study;
   background-image: url(../../assets/images/icon-study.svg);
-  background-position: 120px -3px;
+  background-position: $icons-position-x-desktop $icons-position-y-desktop;
   background-repeat: no-repeat;
-  background-size: 6rem;
+  background-size: $icons-size;
 
   grid-area: study;
 }
 
 @media screen and (max-width: 1080px) {
   .study {
-    background-position: 182px -3px;
+    background-position: $icons-position-x-mobile $icons-position-y-mobile;
   }
 }
