--- a/sass/user/menu.scss
+++ b/sass/user/menu.scss
@@ -8,7 +8,7 @@
   list-style: none;
   padding: 1.5rem;
 
-  .menu-item {
+  .menu_link {
     color: $neutral-pale-blue;
     cursor: pointer;
     opacity: 0.5;
